# studio

./: .gitignore  INVENTARIO INICIAL LAURYS.csv  Inventario_30k_Final_Rebalanceado.json  database.sql  errores_console.md  gemini.md  inventario_enriquecido.csv  inventario_final_consolidado.csv  next.config.ts  nodemon.json  package-lock.json  package.json  productos.csv  productos_corregidos.csv  productos_enriquecidos.csv  tabla.json  temp_product.json  tsconfig.json
PORTABLE_RELEASE_v2/: Iniciar Inventario.bat
PORTABLE_RELEASE_v3/: Iniciar Inventario.bat
archivos/: inventory_movements.csv
docs/: blueprint.md
scripts/: analizar_crecimiento_anual.js  analizar_valor_inventario.js  crear_snapshot.js  create-portable.js  eliminar_snapshot.js  modificar_precios_snapshot.js  modificar_precios_snapshot_2024.js  prepare-installer-files.js  sincronizar_totales_productos.js  verificar_valor_snapshot.js  verify_inventory_value.js
src/: next.config.ts
src-backend/: .gitignore  config.js  database-manager.js  database.db  database_ak_el_reino_TDDA.db  database_ak_el_reino_TDDA_settings.json  database_main_settings.json  e2e-test.js  excel-generator.js  index.js  index.test.js  inventory.test.js  jest.config.js  jest.global-setup.js  jest.global-teardown.js  migrate_descriptions.js  migrate_sales_price.js  package-lock.json  package.json  reports.test.js  schema.sql  stores.json  temp_alter.sql
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/resources/: schema.sql
src-tauri/src/: main.rs
src/app/: globals.css  (+1 more)
(+45 files in other folders)
