[package]
name = "inventario-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
